src/test/ui/rfc-2627-raw-dylib/link-ordinal-too-large.stderr
warning: the feature `raw_dylib` is incomplete and may cause the compiler to crash
  --> $DIR/link-ordinal-too-large.rs:1:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error: ordinal value in `link_ordinal` is too large: `18446744073709551616`
  --> $DIR/link-ordinal-too-large.rs:6:5
   |
LL |     #[link_ordinal(18446744073709551616)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the value may not exceed `std::usize::MAX`

error: aborting due to previous error

